InsightLearn.Cloud/kubernetes/namespace-data.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: insightlearn-data
  labels:
    name: insightlearn-data
    app: insightlearn
    tier: data
